# breaknet

./: Cargo.toml  LICENSE  README.md
bnclient/: Cargo.toml  bnclient-config.yml  config.json
bnclient/src/: client.rs  main.rs
bncom/: Cargo.toml
bncom/src/: _const.rs  base64.rs  config.rs  lib.rs
bnserver/: Cargo.toml  bnserver-config.yml  config.json
bnserver/src/: main.rs  server.rs  slab.rs
gencertificate/: Cargo.toml
gencertificate/src/: main.rs
resources/: user-cert.pem  user-key.pem
