[package]
name = "bnclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

tokio = { version = "1.14.0", features = ["full"] }
log = "0.4"
simple_logger = "3.0.0"
tokio-rustls = { version = "0.23.4" }
rustls-pemfile = "1.0.2"

channel-mux-with-stream = { git = "https://github.com/pysrc/channel-mux-with-stream.git", branch = "0.1.11" }
